feat(security): proteger API e autenticar painel com JWT